Issue #7776; fix cropped form elements

--- a/web/client/themes/default/less/wizard.less
+++ b/web/client/themes/default/less/wizard.less
@@ -62,7 +62,7 @@
     margin: 15px;
 }
 .ms-wizard.map-options {
-    overflow-x: hidden;
+    padding: 8px;
 }
 .mapstore-step-title {
     font-size: 20px;
